--- a/StatsProject2/.classpath
+++ b/StatsProject2/.classpath
@@ -18,5 +18,6 @@
 	<classpathentry kind="lib" path="C:/EclipseJars/jfreechart-1.0.19/lib/servlet.jar"/>
 	<classpathentry kind="lib" path="C:/EclipseJars/jfreechart-1.0.19/lib/swtgraphics2d.jar"/>
 	<classpathentry kind="lib" path="C:/EclipseJars/commons-math-4.0-beta1/commons-math4-core-4.0-beta1.jar"/>
+	<classpathentry kind="lib" path="C:/EclipseJars/commons-math3-3.6.1/commons-math3-3.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
